--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div id="start-page">
     <video autoplay muted loop>
-      <source src="videos/clouds.mp4" type="video/mp4">
+      <source src="videos/eyeintheskytrailer.mp4" type="video/mp4">
     </video>
     <div class="container">
       <div class="center">
