Descriptions for Unity, Blender, Mirror and Clip Studio Paint added

--- a/index.html
+++ b/index.html
@@ -89,13 +89,48 @@
         <div class="six columns" id="technology-info">
           <img src="images/unity.png">
           <h3>Unity</h3>
-          <p> Unity has been used to ...</p>
+          <p> 
+            Unity is a popular cross-platform game engine. 
+            Unity was used as the base for our game and all game logic 
+            was handled by internal Unity components and by custom 
+            components written in the C# programming language; 
+            this includes player movement and interactions, physics, 
+            animation handling, sound, visual effects and more.
+          </p>
         </div>
 
         <div class="six columns" id="technology-info">
           <img src="images/blender.png">
           <h3>Blender</h3>
-          <p> Blender has been used for ...</p>
+          <p> 
+            Blender is an open-source 3D computer graphics software toolset. 
+            We used blender for all 3D-graphics in the game; this includes 3D-modeling, 
+            UV-mapping, rigging and animating the 3D-models and more.
+          </p>
+        </div>
+      </div>
+
+      
+
+      <div class="row">
+        <div class="six columns" id="technology-info">
+          <img src="images/mirror_logo.png">
+          <h3>Mirror</h3>
+          <p>
+            Mirror is a high level Networking API for Unity. 
+            We used Mirror to handle all network traffic between the game clients 
+            and the game host/server; this includes spawning players, updating world state, 
+            tracking player and item positions/transforms and more.
+          </p>
+        </div>
+
+        <div class="six columns" id="technology-info">
+          <img src="images/CSP_logo.png">
+          <h3>Clip Studio Paint</h3>
+          <p>
+            Textures were drawn by hand and exported for use on our 3D-models using 
+            the illustration and drawing software Clip Studio Paint.
+          </p>
         </div>
 
       </div>
