Added text about me + fixed some CSS + links to GitHub etc.

--- a/index.html
+++ b/index.html
@@ -161,15 +161,15 @@
 
   <!-- Team page
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <h2>The team</h2>
   <div id="team">
+    <h2>The team</h2>
     <video autoplay muted loop>
-      <source src="videos/clouds.mp4" type="video/mp4">
+      <source src="videos/Clouds.mp4" type="video/mp4">
     </video>
 
     <div id="team-content" class="container">
       <div class="row">
-        <div class="four columns">
+        <div class="four columns team-card">
           <img id="portrait" src="images/adelina.jpg">
           <h3>Adelina Andersen</h3>
           <h4> 3D Graphics | Interaction mechanics </h4>
@@ -178,7 +178,7 @@
           </p>
         </div>
 
-        <div class="four columns">
+        <div class="four columns team-card">
           <img id="portrait" src="images/lotta.jpg">
           <h3>Anne-Charlot Scholz</h3>
           <h4> 3D Graphics | Interaction mechanics </h4>
@@ -187,17 +187,29 @@
           </p>
         </div>
 
-        <div class="four columns">
-          <img id="portrait" src="images/adelina.jpg">
+        <div class="four columns team-card">
+          <img id="portrait" src="images/Anton_Porsbjer.jpg">
           <h3>Anton Porsbjer</h3>
-          <h4> Gameplay | Network implementation </h4>
+          <h4> Gameplay | Network implementation | Git Master </h4>
           <p>
-            Text about what we have done here, bla bla bla
+            In this project i have mostly been working with gameplay programming 
+            and network implementation, that is implementing gameplay sutch as 
+            player interactions and movment, spawning players, updating the game state, 
+            tracking the players and items positions ower the network. I have also been 
+            responsible for our git repository making sure that we follow a good branch 
+            structure and that mergeing goes smoothly.
           </p>
+          <p>
+            
+            <a href="https://github.com/antonporsbjer" target="_blank"><img src="images/GitHub-Mark-32px.png"></a>
+            <a href="https://se.linkedin.com/in/anton-porsbjer" target="_blank"><img src="images/LInkedIn-32.png"></a>
+            <a href="https://github.com/antonporsbjer" target="_blank"><img src="images/GitHub-Mark-32px.png"></a>
+          </p>
+          
         </div>
       </div>
 
-      <div id="bottom-portraits" class="row">
+      <div id="bottom-portraits team-card" class="row">
         <div class="four columns">
           <img id="portrait" src="images/adelina.jpg">
           <h3>Jenna Smulter</h3>
@@ -207,7 +219,7 @@
           </p>
         </div>
 
-        <div class="four columns">
+        <div class="four columns team-card">
           <img id="portrait" src="images/adelina.jpg">
           <h3>Konrad Wihl</h3>
           <h4> Interaction programming | Network </h4>
