--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   <div id="theGame">
     <h2>The game</h2>
     <div id="game">
-      <img id="eyeintheSky" src="images/eyeintheskyimage.png">
+      <img id="eyeintheSky" src="images/eyeintheskyimage2.png">
       <div class="container">
         <img id="cloud" src="images/cloud.png">
         <p>Eye in the sky is an asymetric multiplayer game that can be played on either a desktop or tablet.
@@ -211,7 +211,7 @@
 
       <div id="bottom-portraits team-card" class="row">
         <div class="four columns">
-          <img id="portrait" src="images/adelina.jpg">
+          <img id="portrait" src="images/jenna.jpg">
           <h3>Jenna Smulter</h3>
           <h4> 2D & 3D Graphics </h4>
           <p>
