--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <img id="eyeintheSky" src="images/eyeintheskyimage.png">
       <div class="container">
         <img id="cloud" src="images/cloud.png">
-        <p>Eye in the sky is an asymetric multiplayer game that can be played on either a desktop or tablet.
+        <p>Eye in the sky is an asymmetric multiplayer game that can be played on either a desktop or tablet.
           The players can either play on the ground and try to collect all pineapples and bring them back to the home
           base before the time runs out or play as the <i>Eye in the Sky </i>
           who tries to interfere with the other players and stop them from completing their mission.
@@ -183,7 +183,15 @@
           <h3>Anne-Charlot Scholz</h3>
           <h4> 3D Graphics | Interaction mechanics </h4>
           <p>
-            Text about what we have done here, bla bla bla
+            In this project I was heavily involved in creating the 3D graphics for the game, 
+            which includes modelling of the game environment as well as characters and 
+            adding rigs and animations for them. Additionally, I had created first
+            drafts of a UI menu and a HUD display. I also worked on interaction mechanics 
+            such as the player picking up and counting the collected pineapples.  
+          </p>
+          <p>
+            <a href="https://www.linkedin.com/in/anne-charlot-scholz-66674b182/" target="_blank"><img src="images/LInkedIn-32.png"></a>
+            <a href="mailto:acscholz@kth.se.com"><img style="width:30px; height:30px; padding-left:10px;" src="images/google-mail.png"></a>
           </p>
         </div>
 
@@ -193,11 +201,11 @@
           <h4> Gameplay | Network implementation | Git Master </h4>
           <p>
             In this project i have mostly been working with gameplay programming 
-            and network implementation, that is implementing gameplay sutch as 
-            player interactions and movment, spawning players, updating the game state, 
-            tracking the players and items positions ower the network. I have also been 
+            and network implementation, that is implementing gameplay such as 
+            player interactions and movement, spawning players, updating the game state, 
+            tracking the players and items positions over the network. I have also been 
             responsible for our git repository making sure that we follow a good branch 
-            structure and that mergeing goes smoothly.
+            structure and that merging goes smoothly.
           </p>
           <p>
             
