--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Eye in the Sky</title>
 
   <script src="scroll.js"></script>
+  <script src="imageGallery.js"></script>
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -155,7 +156,70 @@
 
       <h2> Video here </h2>
 
-      <h2>Images here</h2>
+      <div id="image-gallery" class="container">
+        <h2>Gallery</h2>
+
+        <div class="row">
+          <div class="three columns">
+            <img class="ig-img" src="images/screenshots/screenshot1.jpg">
+          </div>
+          <div class="three columns">
+            <img class="ig-img" src="images/screenshots/screenshot2.jpg">
+          </div>
+          <div class="three columns">
+            <img class="ig-img" src="images/screenshots/screenshot3.jpg">
+          </div>
+          <div class="three columns">
+            <img class="ig-img" src="images/screenshots/screenshot4.jpg">
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="three columns">
+            <img class="ig-img" src="images/screenshots/screenshot5.jpg">
+          </div>
+          <div class="three columns">
+            <img class="ig-img" src="images/screenshots/screenshot6.jpg">
+          </div>
+          <div class="three columns">
+            <img class="ig-img" src="images/screenshots/screenshot7.jpg">
+          </div>
+          <div class="three columns">
+            <img class="ig-img" src="images/screenshots/screenshot8.jpg">
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="three columns">
+            <img class="ig-img" src="images/screenshots/screenshot9.jpg">
+          </div>
+          <div class="three columns">
+            <img class="ig-img" src="images/screenshots/screenshot10.jpg">
+          </div>
+          <div class="three columns">
+            <img class="ig-img" src="images/screenshots/screenshot11.jpg">
+          </div>
+          <div class="three columns">
+            <img class="ig-img" src="images/screenshots/screenshot12.jpg">
+          </div>
+        </div>
+
+      </div>
+
+      <!-- The Modal -->
+      <div id="ig-modal" class="modal">
+
+        <!-- The Close Button -->
+        <span class="close">&times;</span>
+
+        <!-- Modal Content (The Image) -->
+        <img class="modal-content" id="modal-img">
+
+        <!-- Next/previous controls -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+
     </div>
   </div>
 
