--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
         <img class="modal-content" id="modal-img">
 
         <!-- Next/previous controls -->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        <a class="prev" onclick="nextImg(-1)">&#10094;</a>
+        <a class="next" onclick="nextImg(1)">&#10095;</a>
       </div>
 
     </div>
