--- a/index.html
+++ b/index.html
@@ -85,9 +85,18 @@
             where the players are able to interact with each other while still being able to be physically distant. </p>
         </div>
 
-        <div class="four columns" id="about-section">
+        <div class="twelve columns" id="about-section">
           <h3 id="about-title"> Process </h3>
-          <p id="justfy-text"> The goal of this project was... </p>
+          <p id="justfy-text"> 
+            Eye in the Sky is a project that was created over the course of around 16 weeks and the process was divided into two phases.
+          </p>
+
+          <p id="justfy-text">
+During the first phase a lot of focus was put on network implementation, cross-platform connection, augmented reality and movement of our 3d player. We also started creating models for the environment, which we had envisioned to be planets. Some difficulties came with having the game environment be spherical, since gravity and especially the player camera were difficult to implement. Parts of the environment were finished and we had our first AR prototype for Eye in the Sky on the tablet but it became clear that having a spherical game world would become too big of a challenge and therefore the decision was made to change plans and discard much of the work previously done. 
+          </p>
+          <p id="justfy-text"> 
+During phase 2 we had reimagined the arena for the players and decided on floating islands instead of the planets. These were modelled, colored and populated with old and new models. Characters were designed, modelled, rigged and animated. We also created crucial interaction mechanics, such as a jump pad for the player to use to jump between islands. Pineapples were added for the player to collect and a Heads Up Display (HUD) was programmed to count the pineapples as well as show a countdown. Lastly, we created original music in the form of a theme for the game. 
+             </p>
         </div>
       </div>
     </div>
@@ -161,7 +170,7 @@
       <img id="eyeintheSky" src="images/eyeintheskyimage.png">
       <div class="container">
         <img id="cloud" src="images/cloud.png">
-        <p>Eye in the Sky is an asymetric multiplayer game that can be played on a desktop or tablet.
+        <p>Eye in the Sky is an asymmetric multiplayer game that can be played on a desktop or tablet.
           The players can either play on the ground and try to collect all pineapples and bring them back to the home
           base before the time runs out or play as the <i>Eye in the Sky </i>
           who tries to interfere with the other players and stop them from completing their mission.
@@ -184,18 +193,21 @@
 
     <div id="team-content" class="container">
       <div class="row">
-        <div class="four columns team-card">
+        <div class="six columns team-card">
           <img id="portrait" src="images/adelina.jpg">
           <h3>Adelina Andersen</h3>
           <h4> 3D Graphics | Interaction mechanics </h4>
           <p>
-            During this project I have been involved in making 3D models and designing environments for the game 
-            as well as creating the particle system for the home base area.
-            I have also created the interaction mechanics for the jump pad, making it possible to move between the different planets.
+            During this project I have been involved in making 3D models and designing environments for the game.
+            I have also created the particle system for the home base area, indicating where the players should 
+            drop the pineapples. In addition I have also created the interaction mechanics for the jump pad which 
+            makes it possible to move between the different planets.
           </p>
+          <a href="https://www.linkedin.com/in/adelina-andersen-b80633128/" target="_blank"><img src="images/LInkedIn-32.png"></a>
+          <a href="mailto:adelina.andersen@gmail.com"><img style="width:30px; height:30px; padding-left:10px;" src="images/google-mail.png"></a>
         </div>
 
-        <div class="four columns team-card">
+        <div class="six columns team-card">
           <img id="portrait" src="images/lotta.jpg">
           <h3>Anne-Charlot Scholz</h3>
           <h4> 3D Graphics | Interaction mechanics </h4>
@@ -208,11 +220,13 @@
           </p>
           <p>
             <a href="https://www.linkedin.com/in/anne-charlot-scholz-66674b182/" target="_blank"><img src="images/LInkedIn-32.png"></a>
-            <a href="mailto:acscholz@kth.se.com"><img style="width:30px; height:30px; padding-left:10px;" src="images/google-mail.png"></a>
+            <a href="mailto:acscholz@kth.se"><img style="width:30px; height:30px; padding-left:10px;" src="images/google-mail.png"></a>
           </p>
         </div>
+      </div>
 
-        <div class="four columns team-card">
+      <div class="row">
+        <div class="six columns team-card">
           <img id="portrait" src="images/Anton_Porsbjer.jpg">
           <h3>Anton Porsbjer</h3>
           <h4> Gameplay | Network implementation | Git Master </h4>
@@ -232,10 +246,8 @@
           </p>
           
         </div>
-      </div>
 
-      <div id="bottom-portraits team-card" class="row">
-        <div class="four columns">
+        <div class="six columns">
           <img id="portrait" src="images/adelina.jpg">
           <h3>Jenna Smulter</h3>
           <h4> 2D & 3D Graphics </h4>
@@ -243,19 +255,18 @@
             Text about what we have done here, bla bla bla
           </p>
         </div>
+      </div>
 
-        <div class="four columns team-card">
-          <img id="portrait" src="images/adelina.jpg">
+        <div class="twelve columns team-card">
+          <img id="portrait" src="images/adelina.jpg" style="width:20%">
           <h3>Konrad Wihl</h3>
           <h4> Interaction programming | Network </h4>
-          <p>
+          <p style="left:50%">
             Text about what we have done here, bla bla bla
           </p>
         </div>
       </div>
-    </div>
   </div>
-
 </body>
 
 </html>
