--- a/index.html
+++ b/index.html
@@ -93,11 +93,15 @@
           </p>
 
           <p id="justfy-text">
-During the first phase a lot of focus was put on network implementation, cross-platform connection, augmented reality and movement of our 3d player. We also started creating models for the environment, which we had envisioned to be planets. Some difficulties came with having the game environment be spherical, since gravity and especially the player camera were difficult to implement. Parts of the environment were finished and we had our first AR prototype for Eye in the Sky on the tablet but it became clear that having a spherical game world would become too big of a challenge and therefore the decision was made to change plans and discard much of the work previously done. 
+          During the first phase a lot of focus was put on network implementation, cross-platform connection, augmented reality and movement of our 3d player. We also started creating models for the environment, which we had envisioned to be planets. Some difficulties came with having the game environment be spherical, since gravity and especially the player camera were difficult to implement. Parts of the environment were finished and we had our first AR prototype for Eye in the Sky on the tablet but it became clear that having a spherical game world would become too big of a challenge and therefore the decision was made to change plans and discard much of the work previously done. 
           </p>
           <p id="justfy-text"> 
-During phase 2 we had reimagined the arena for the players and decided on floating islands instead of the planets. These were modelled, colored and populated with old and new models. Characters were designed, modelled, rigged and animated. We also created crucial interaction mechanics, such as a jump pad for the player to use to jump between islands. Pineapples were added for the player to collect and a Heads Up Display (HUD) was programmed to count the pineapples as well as show a countdown. Lastly, we created original music in the form of a theme for the game. 
-             </p>
+            During phase 2 we had reimagined the arena for the players and decided on floating islands instead of the planets. These were modelled, colored and populated with old and new models. Characters were designed, modelled, rigged and animated. We also created crucial interaction mechanics, such as a jump pad for the player to use to jump between islands. Pineapples were added for the player to collect and a Heads Up Display (HUD) was programmed to count the pineapples as well as show a countdown. 
+            Instead of an AR implementation for the Eye in the Sky player, we opted for a gyroscope on the tablet and added a freeze interaction. Lastly, we created original music in the form of a theme for the game. 
+                         </p>
+          <p id="justfy-text">
+            Design and game mechanics were polished during the last weeks of the project work, as well as particle effects being added. 
+          </p>
         </div>
       </div>
     </div>
