--- a/index.html
+++ b/index.html
@@ -103,6 +103,24 @@
             Design and game mechanics were polished during the last weeks of the project work, as well as particle effects being added. 
           </p>
         </div>
+
+        <div class="twelve columns" id="about-section">
+          <h3 id="about-title"> Challenges </h3>
+          <p id="justfy-text"> 
+            We faced several obstacles during our project work, from which we learned to adapt and
+            compromise.
+          </p>
+
+          <p id="justfy-text">
+            Spherical game world <br/>
+            One challenge was the implementation of gravity for the spherical planets and the camera movement required for it. Sadly we didn’t have the time to overcome this challenge and instead adapted to a different option. 
+                      </p>
+          <p id="justfy-text"> 
+            AR <br/>
+            The implementation of AR on the tablet as a cross-platform game mechanic - which would have enabled the Eye in the Sky to walk around the room to view the game environment - showed to be very problematic. The synchronization between platforms was the main offender here and this problem could unfortunately not be solved. Instead, we resorted to having the player on the tablet use a gyroscope.                          </p>
+          <p id="justfy-text">
+            Network          </p>
+        </div>
       </div>
     </div>
   </div>
