fetstil på rubriker i challenges

--- a/index.html
+++ b/index.html
@@ -112,14 +112,15 @@
           </p>
 
           <p id="justfy-text">
-            Spherical game world <br/>
+            <b>Spherical game world</b><br/>
             One challenge was the implementation of gravity for the spherical planets and the camera movement required for it. Sadly we didn’t have the time to overcome this challenge and instead adapted to a different option. 
                       </p>
           <p id="justfy-text"> 
-            AR <br/>
+            <b>AR</b> <br/>
             The implementation of AR on the tablet as a cross-platform game mechanic - which would have enabled the Eye in the Sky to walk around the room to view the game environment - showed to be very problematic. The synchronization between platforms was the main offender here and this problem could unfortunately not be solved. Instead, we resorted to having the player on the tablet use a gyroscope.                          </p>
           <p id="justfy-text">
-            Network          </p>
+            <b>Network</b>
+          </p>
         </div>
       </div>
     </div>
