center konrad text

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
           
         </div>
 
-        <div class="six columns">
+        <div class="six columns team-card">
           <img id="portrait" src="images/jenna.jpg">
           <h3>Jenna Smulter</h3>
           <h4> 2D & 3D Graphics </h4>
@@ -350,7 +350,7 @@
           <img id="portrait" src="images/adelina.jpg" style="width:20%">
           <h3>Konrad Wihl</h3>
           <h4> Interaction programming | Network </h4>
-          <p style="left:50%">
+          <p style="text-align: center;">
             Text about what we have done here, bla bla bla
           </p>
         </div>
