--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             drop the pineapples. In addition I have also created the interaction mechanics for the jump pad which 
             makes it possible to move between the different planets.
           </p>
-          <p>
+          <p id="centered">
             <a href="https://www.linkedin.com/in/adelina-andersen-b80633128/" target="_blank"><img src="images/LInkedIn-32.png"></a>
             <a href="mailto:adelina.andersen@gmail.com"><img style="width:30px; height:30px; padding-left:10px;" src="images/google-mail.png"></a>
           </p>
@@ -307,7 +307,7 @@
             drafts of a UI menu and a HUD display. I also worked on interaction mechanics 
             such as the player picking up and counting the collected pineapples.  
           </p>
-          <p>
+          <p id="centered">
             <a href="https://www.linkedin.com/in/anne-charlot-scholz-66674b182/" target="_blank"><img src="images/LInkedIn-32.png"></a>
             <a href="mailto:acscholz@kth.se"><img style="width:30px; height:30px; padding-left:10px;" src="images/google-mail.png"></a>
           </p>
@@ -327,7 +327,7 @@
             responsible for our git repository making sure that we follow a good branch 
             structure and that merging goes smoothly.
           </p>
-          <p>
+          <p id="centered">
             
             <a href="https://github.com/antonporsbjer" target="_blank"><img src="images/GitHub-Mark-32px.png"></a>
             <a href="https://se.linkedin.com/in/anton-porsbjer" target="_blank"><img src="images/LInkedIn-32.png"></a>
@@ -350,7 +350,7 @@
           <img id="portrait" src="images/adelina.jpg" style="width:20%">
           <h3>Konrad Wihl</h3>
           <h4> Interaction programming | Network </h4>
-          <p style="text-align: center;">
+          <p id="centered">
             Text about what we have done here, bla bla bla
           </p>
         </div>
