moved mail icon style to css

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
           </p>
           <p id="centered">
             <a href="https://www.linkedin.com/in/adelina-andersen-b80633128/" target="_blank"><img src="images/LInkedIn-32.png"></a>
-            <a href="mailto:adelina.andersen@gmail.com"><img style="width:30px; height:30px; padding-left:10px;" src="images/google-mail.png"></a>
+            <a href="mailto:adelina.andersen@gmail.com"><img id="mail_pic" src="images/google-mail.png"></a>
           </p>
         </div>
 
@@ -310,7 +310,7 @@
           </p>
           <p id="centered">
             <a href="https://www.linkedin.com/in/anne-charlot-scholz-66674b182/" target="_blank"><img src="images/LInkedIn-32.png"></a>
-            <a href="mailto:acscholz@kth.se"><img style="width:30px; height:30px; padding-left:10px;" src="images/google-mail.png"></a>
+            <a href="mailto:acscholz@kth.se"><img id="mail_pic" src="images/google-mail.png"></a>
           </p>
         </div>
       </div>
