added correct video links

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           <div class="columns">
             <!--<img class="vg-img" src="images/Thumbnails/trailer.png">-->
             <div class="videoWrapper">
-              <iframe width="auto" height="auto" src="https://www.youtube-nocookie.com/embed/-i424bKe-kY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="auto" height="auto" src="https://www.youtube-nocookie.com/embed/S19m_fc5Yfs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
         </div>
@@ -219,14 +219,14 @@
           <div class="columns">
             <!--<img class="vg-img" src="images/Thumbnails/gameplaydemo.png">-->
             <div class="videoWrapper">
-              <iframe width="auto" height="auto" src="https://www.youtube-nocookie.com/embed/-i424bKe-kY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="auto" height="auto" src="https://www.youtube-nocookie.com/embed/B2zd2DlGguc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>          </div>
         </div>
         <div class="row">
           <div class="columns">
             <!--<img class="vg-img" src="images/Thumbnails/makingof.png">-->
             <div class="videoWrapper">
-              <iframe width="auto" height="auto" src="https://www.youtube-nocookie.com/embed/-i424bKe-kY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="auto" height="auto" src="https://www.youtube-nocookie.com/embed/bcWa7gRosXk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>        </div>
 
       </div>
