--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
             
             <a href="https://github.com/antonporsbjer" target="_blank"><img src="images/GitHub-Mark-32px.png"></a>
             <a href="https://se.linkedin.com/in/anton-porsbjer" target="_blank"><img src="images/LInkedIn-32.png"></a>
-            <a href="https://github.com/antonporsbjer" target="_blank"><img src="images/GitHub-Mark-32px.png"></a>
+            <a href="mailto:porsbjer@kth.se"><img id="mail_pic" src="images/envelope.png"></a>
           </p>
           
         </div>
@@ -342,9 +342,16 @@
         <div class="six columns team-card">
           <img id="portrait" src="images/jenna.jpg">
           <h3>Jenna Smulter</h3>
-          <h4> 2D & 3D Graphics </h4>
+          <h4> 2D & 3D Graphics | Animations</h4>
           <p>
-            Text about what we have done here, bla bla bla
+            In this project I have worked on character animations, 
+            3D graphics and 2D graphics. I have created concept art and character designs, 
+            created 3D models for characters and objects, painted textures for characters and objects, 
+            created rigs and animations for the characters and implemented and configured the animations in Unity. 
+            I have also created some art assets for the game and user interface.
+          </p>
+          <p id="centered">
+            <a href="mailto:smulter@kth.se"><img id="mail_pic" src="images/envelope.png"></a>
           </p>
         </div>
       </div>
