--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
       </div>
 
       <div class="twelve columns team-card">
-        <img id="portrait" src="images/adelina.jpg" style="width:20%">
+        <img id="portrait" src="images/konrad.png" style="width:20%">
         <h3>Konrad Wihl</h3>
         <h4> Interaction programming | Network </h4>
         <p id="centered">
