--- a/index.html
+++ b/index.html
@@ -142,7 +142,11 @@
           solved. Instead, we resorted to having the player on the tablet use a gyroscope.
         </p>
         <p id="justfy-text">
-          <b>Network</b>
+          <b>Network</b><br />
+          The networking part of the game proved to be a huge challenge.
+          None of us had any prior experience of network programming for games, so a lot of our time was spent on 
+          learning how to use the network interface and actually make it work, such as server-client calls, and updating the game state for all players.
+          We managed to overcome most of the challenges regarding the network.
         </p>
       </div>
     </div>
