--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <!-- Icon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
+  <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
 
