added contribution description

--- a/index.html
+++ b/index.html
@@ -430,6 +430,10 @@
         <h3>Konrad Wihl</h3>
         <h4> Interaction programming | Network </h4>
         <p id="centered">
+          My main focus in this project has been the back-end logic concerning things like network programming,
+          general gameplay and interaction mechanics. I’ve worked mostly on things like network implementation and testing across devices,
+          distinguishing the airborne player from ground players via device detection, and the ability for the former to interact with the
+          latter’s movement over the network, i.e. freezing them.
         </p>
       </div>
     </div>
