--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         <img id="portrait" src="images/konrad.png" style="width:20%">
         <h3>Konrad Wihl</h3>
         <h4> Interaction programming | Network </h4>
-        <p id="centered">
+        <p id="bottom-text" >
           My main focus in this project has been the back-end logic concerning things like network programming,
           general gameplay and interaction mechanics. I’ve worked mostly on things like network implementation and testing across devices,
           distinguishing the airborne player from ground players via device detection, and the ability for the former to interact with the
